# Portfolio

./: Cargo.toml
pages/: 404.html  about.html  categories.html  landing.html  styles.css
src/: categories_html.rs  footer  header  main.rs  project_html.rs  projects.rs
