[package]
name = "Portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
EasyWebsiteBuilder2 = { path = "../EasyWebsiteBuilder2" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"]}
rust-embed = "8.11.0"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
lto = false
target-cpu = "native"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
